# xgamengine

./: .gitignore  Cargo.toml  README.md  xgamengine.asd
src/: chronicle.rs  engine.lisp  engine.rs  json.lisp  lib.rs  main.rs  memory.rs  package.lisp  state.rs
src/llm/: client.lisp  client.rs  stream.lisp
src/memory/: short-term.lisp
src/prompt/: builder.lisp  builder.rs  loader.lisp  loader.rs  mod.rs
src/scenes/: protocol.rs
src/state/: state.lisp
src/tui/: app.rs
tests/: integration-test.lisp  integration_test.rs  multi_turn.rs  suite.lisp
